--- a/Movie.html
+++ b/Movie.html
@@ -1,8 +1,8 @@
 <html>
 <!- - 
 Program Name:   Seminole Movie Connection
-Author: 
-Date: 
+Author: Kate Motsett
+Date: December 3, 2016
 Filename:   Movie.html
 - ->
     
@@ -53,6 +53,38 @@ Filename:   Movie.html
             <h3 class="list-group-item-heading">Release Date:</h3>
             <p class="list-group-item-text lead text-primary" id="Released">  </p>
         </a> 
+         <a href="#" class="list-group-item">
+            <h3 class="list-group-item-heading">Time:</h3>
+            <p class="list-group-item-text lead text-primary" id="Time">  </p>
+        </a> 
+         <a href="#" class="list-group-item">
+            <h3 class="list-group-item-heading">Genre:</h3>
+            <p class="list-group-item-text lead text-primary" id="Genre">  </p>
+        </a> 
+         <a href="#" class="list-group-item">
+            <h3 class="list-group-item-heading">Filming Locations:</h3>
+            <p class="list-group-item-text lead text-primary" id="Filming">  </p>
+        </a> 
+         <a href="#" class="list-group-item">
+            <h3 class="list-group-item-heading">Director:</h3>
+            <p class="list-group-item-text lead text-primary" id="Director">  </p>
+        </a> 
+        <a href="#" class="list-group-item">
+            <h3 class="list-group-item-heading">Reviews:</h3>
+            <p class="list-group-item-text lead text-primary" id="Reviews">  </p>
+        </a> 
+         <a href="#" class="list-group-item">
+            <h3 class="list-group-item-heading">Plot Summary:</h3>
+            <p class="list-group-item-text lead text-primary" id="Plot">  </p>
+        </a> 
+         <a href="#" class="list-group-item">
+            <h3 class="list-group-item-heading">Synopsis:</h3>
+            <p class="list-group-item-text lead text-primary" id="Synopsis">  </p>
+        </a> 
+         <a href="#" class="list-group-item">
+            <h3 class="list-group-item-heading">Awards:</h3>
+            <p class="list-group-item-text lead text-primary" id="Awawrds">  </p>
+        </a> 
 
     </div>
 </div> 
@@ -71,6 +103,15 @@ Filename:   Movie.html
                      $('#Actors').html(json.Actors);
                      $('#Plot').html(json.Plot);
                      $('#Released').html(json.Released);
+                     $('#Time').html(json.Time);
+                     $('#Genre').html(json.Genre);
+                     $('#Filming Locations').html(json.Filming);
+                     $('#Director').html(json.Director);
+                     $('#Reviews').html(json.Reviews);
+                     $('#Plot Summary').html(json.Plot);
+                     $('#Synopsis').html(json.Synopsis);
+                     $('#Awards').html(json.Awards);
+                     
                 })
                 .fail(function() {
                       alert("Posting failed.");              
